--- a/BorisDatabase/DataBase/templates/DataBase/main_page.html
+++ b/BorisDatabase/DataBase/templates/DataBase/main_page.html
@@ -5,16 +5,13 @@
     <form action="/database/" method="post">
         {% csrf_token %} 
         {{ AddWorker_form }}
-       <!-- <label for="full_name">Full name:</label>
-        <input id="full_name" type="text" name="full_name" />
-        <label for="passport_number">Passport number:</label>
-        <input id="passport_number" type="text" name="passport_number" />
-        <label for="workers_contacts">Contacts:</label>
-        <input id="workers_contacts" type="text" name="workers_contacts" />-->
-        <input type="submit" value="Add" />
-        
+        <input type="submit" value="Add" />    
     </form>
-    <input type = "text"></input><button>Add</button>
+    <form action="/database/" method="post">
+        {% csrf_token %} 
+        {{ search_form }}
+        <input type = "submit" value="Search"/>
+    </form>
     <ul>
     {% for worker in list_of_workers %}
         <li>{{worker.passport_number}}, {{worker.full_name}}, {{worker.workers_contacts}}</li>
