Added company and worker pages with add and search forms, reworked main page - removed acces to adding into workers table from main_page.

--- a/BorisDatabase/DataBase/templates/DataBase/worker_page.html
+++ b/BorisDatabase/DataBase/templates/DataBase/worker_page.html
@@ -1,9 +1,14 @@
 <body>
-    <div> <a href="/database_app/worker/">Workers</a></div>
+    <div> <a href="/database_app/main_page/">Main page</a></div>
     <div> <a href="/database_app/company/">Company</a></div>
     <div> <a href="/database_app/contracts/">Contracts</a></div>
     <form action="." method="post">
-        {% csrf_token %} 
+        {% csrf_token %}
+        {{ AddWorker_form }}
+        <input type="submit" value="Add" />
+    </form>
+    <form action="." method="post">
+        {% csrf_token %}
         {{ search_form }}
         <input type = "submit" value="Search"/>
     </form>
@@ -11,7 +16,8 @@
     {% for worker in list_of_workers %}
         <li>{{worker.passport_number}}, {{worker.full_name}}, {{worker.workers_contacts}}</li>
     {% endfor %}
-    </ul> 
+    </ul>
 <body/>
+
 
 
