added Pay page, representing database with hourly pay in related company.

--- a/BorisDatabase/DataBase/templates/DataBase/company_page.html
+++ b/BorisDatabase/DataBase/templates/DataBase/company_page.html
@@ -1,6 +1,7 @@
 <body>
     <div> <a href="/database_app/main_page/">Main page</a></div>
     <div> <a href="/database_app/worker/">Workers</a></div>
+    <div> <a href="/database_app/pay/">Pay</a></div>
     <div> <a href="/database_app/contracts/">Contracts</a></div>
     <p>You`re at the company page</p>
     <form action="." method="post">
