--- a/BorisDatabase/DataBase/templates/DataBase/main_page.html
+++ b/BorisDatabase/DataBase/templates/DataBase/main_page.html
@@ -1,6 +1,7 @@
 <body>
     <div> <a href="/database_app/worker/">Workers</a></div>
     <div> <a href="/database_app/company/">Company</a></div>
+    <div> <a href="/database_app/pay/">Pay</a></div>
     <div> <a href="/database_app/contracts/">Contracts</a></div>
     <form action="." method="post">
         {% csrf_token %} 
